# games101work

./: .gitignore  README.md
work0/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
work1/work1/: CMakeLists.txt  main.cpp
work2/work2/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
